updated app and added model evaluation

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "bc4901b1",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "52d42984",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "'c:\\\\Users\\\\gopal\\\\End-to-end-Machine-Learning-with-MLOps-\\\\research'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "6967ff51",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "b3233247",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "'c:\\\\Users\\\\gopal\\\\End-to-end-Machine-Learning-with-MLOps-'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "8c76e0f2",
    "metadata": {},
    "outputs": [],
@@ -111,22 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "8e9635c0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'CONFIG_FILE_PATH' from 'MLOps_Project.constants' (C:\\Users\\gopal\\End-to-end-Machine-Learning-with-MLOps-\\src\\MLOps_Project\\constants\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mMLOps_Project\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconstants\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CONFIG_FILE_PATH, PARAMS_FILE_PATH, SCHEMA_FILE_PATH\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mMLOps_Project\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcommon\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m read_yaml, create_directories\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'CONFIG_FILE_PATH' from 'MLOps_Project.constants' (C:\\Users\\gopal\\End-to-end-Machine-Learning-with-MLOps-\\src\\MLOps_Project\\constants\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from MLOps_Project.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH, SCHEMA_FILE_PATH\n",
     "from MLOps_Project.utils.common import read_yaml, create_directories"
@@ -158,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "c39fb8f0",
    "metadata": {},
    "outputs": [],
@@ -195,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "7169bd24",
    "metadata": {},
    "outputs": [
@@ -219,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "bb44d51f",
    "metadata": {},
    "outputs": [],
@@ -233,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "70cafe1d",
    "metadata": {},
    "outputs": [],
@@ -271,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "52f2c39d",
    "metadata": {},
    "outputs": [
@@ -279,12 +267,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2026-01-19 18:51:23,293: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2026-01-19 18:51:23,308: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2026-01-19 18:51:23,318: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2026-01-19 18:51:23,326: INFO: common: created directory at: artifacts]\n",
-      "[2026-01-19 18:51:23,329: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2026-01-19 18:51:24,861: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2026-01-21 13:57:44,537: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2026-01-21 13:57:44,540: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2026-01-21 13:57:44,542: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2026-01-21 13:57:44,546: INFO: common: created directory at: artifacts]\n",
+      "[2026-01-21 13:57:44,551: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2026-01-21 13:57:46,668: INFO: 2366278714: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 23329\n",
       "Cache-Control: max-age=300\n",
@@ -295,19 +283,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: F8B4:141E3F:479B77:9AED7A:696E2FD4\n",
+      "X-GitHub-Request-Id: 703A:365695:7259D8:901AD2:697085EF\n",
       "Accept-Ranges: bytes\n",
-      "Date: Mon, 19 Jan 2026 13:21:24 GMT\n",
+      "Date: Wed, 21 Jan 2026 08:27:46 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-hyd1500028-HYD\n",
-      "X-Cache: MISS\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1768828884.365158,VS0,VE291\n",
+      "X-Served-By: cache-hyd1500029-HYD\n",
+      "X-Cache: HIT\n",
+      "X-Cache-Hits: 1\n",
+      "X-Timer: S1768984065.416725,VS0,VE1236\n",
       "Vary: Authorization,Accept-Encoding\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: b1839ed0c04920b6164400bc40ab011d835bd3e8\n",
-      "Expires: Mon, 19 Jan 2026 13:26:24 GMT\n",
+      "X-Fastly-Request-ID: b2a633d77ac78292d7b4f738b788f1814cca77a8\n",
+      "Expires: Wed, 21 Jan 2026 08:32:46 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
