--- a/research/04_model_training.ipynb
+++ b/research/04_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "0197bd7c",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "d3ebd8c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\gopal\\\\End-to-end-Machine-Learning-with-MLOps-\\\\research'"
+       "'c:\\\\Users\\\\gopal\\\\End-to-end-Machine-Learning-with-MLOps-'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "b8bff2a1",
    "metadata": {},
    "outputs": [],
@@ -43,17 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "90457c99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\gopal\\\\End-to-end-Machine-Learning-with-MLOps-'"
+       "'c:\\\\Users\\\\gopal'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d7e45ecd",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "36ededcc",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "f18f4cfc",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "4c713a46",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "8d971cc8",
    "metadata": {},
    "outputs": [
@@ -186,11 +186,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2026-01-20 17:55:59,481: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2026-01-20 17:55:59,484: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2026-01-20 17:55:59,484: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2026-01-20 17:55:59,493: INFO: common: created directory at: artifacts]\n",
-      "[2026-01-20 17:55:59,495: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2026-01-21 12:40:30,623: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2026-01-21 12:40:30,628: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2026-01-21 12:40:30,632: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2026-01-21 12:40:30,634: INFO: common: created directory at: artifacts]\n",
+      "[2026-01-21 12:40:30,637: INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     }
    ],
